[package]
name = "parser"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[features]
default = ["rc"]
rc = []

[dependencies]
lexer = { path = "../lexer" }
memory = { path = "../memory" }
thiserror = { workspace = true }
smallvec = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
test_utils = { path = "../test_utils", default-features = false }
assert-json-diff = "2.0"
tokio = { version = "1.0", features = ["full"] }
similar-asserts = "1.4"  # 增强的断言输出
